# Krabby-gotchi

./: Cargo.toml  LICENSE  LICENSE.md  README.md
src/: krab.rs  main.rs  tui.rs
