[package]
name = "mrKrabs"
version = "1.1.0"
edition = "2021"
authors = ["Tharun Tilakumara"]
readme = "README.md"
repository = "https://github.com/DrCheeseFace/Krabby-gotchi"
license = "MIT"
description = "A CLI based virtual pet game"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.26.3"
savefile = "0.17"
savefile-derive = "0.17"
